<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity" >

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_sign_in"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_sign_in_icon"
            android:alpha="0"
            android:layout_height="150dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:contentDescription="@string/sign_in_icon_desc"
            app:srcCompat="@drawable/sign_in_icon" />

        <TextView
            android:id="@+id/tv_sign_in_desc_1"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/sign_in_desc_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sign_in_desc_2"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/sign_in_desc_2" />

        <TextView
            android:id="@+id/tv_email_sign_in"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.example.myuserstory.ui.customview.MyEmailEditText
            android:id="@+id/ed_login_email"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="15dp"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/tv_password_sign_in"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.example.myuserstory.ui.customview.MyPasswordEditText
            android:id="@+id/ed_login_password"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="15dp"
            android:drawablePadding="10dp" />

        <Button
            android:id="@+id/btn_sign_in"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in"
            android:background="@drawable/button_rounded" />

        <TextView
            android:id="@+id/tv_ask_register"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/ask_register"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_ask_sign_up"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/ask_sign_up"
            android:background="@drawable/button_rounded" />
    </LinearLayout>

</FrameLayout>

