<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailuserstory.DetailUserStoryActivity">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_detail_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    app:srcCompat="@drawable/baseline_account_box_24"
                    android:contentDescription="@string/user_story_icon" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    tools:text="@string/user_story_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_detail_location_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    app:srcCompat="@drawable/baseline_person_pin_circle_24"
                    android:contentDescription="@string/detail_location_icon" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="17dp"
                    tools:text="@string/detail_location"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/user_story_photo" />

            <TextView
                android:id="@+id/tv_detail_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/view_border"
                android:padding="10dp"
                tools:text="@string/user_story_created" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/view_border"
                android:padding="10dp"
                tools:text="@string/user_story_description" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/detail_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible" />
</FrameLayout>