<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addnewuserstory.AddNewUserStoryActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_add_img"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/baseline_image_24"
                android:contentDescription="@string/add_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_camera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:layout_weight="1"
                    android:layout_marginStart="60dp"
                    android:background="@drawable/button_rounded" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/btn_add_gallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:layout_weight="1"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/button_rounded" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_add_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_location"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/button_rounded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_add_location_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/camera"
                    android:layout_marginStart="60dp"
                    android:background="@drawable/baseline_person_pin_circle_24" />

                <TextView
                    android:id="@+id/tv_add_location"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/gallery"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="60dp"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_add_description_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/view_border"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_description"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/upload"
                android:background="@drawable/button_rounded" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/add_progress_bar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />
    </FrameLayout>

</ScrollView>

